force-app/main/default/objects/Application_Property__c/Application_Property__c.object-meta.xml
<CustomObject>
    <label>Application Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>