force-app/main/default/objects/Application_Property__c/fields/Air_Conditioning__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning__c</fullName>
    <label>Air Conditioning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>