force-app/main/default/objects/Application_Property__c/fields/Borrower_Opinion_of_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Opinion_of_Current_Value__c</fullName>
    <label>Borrower Opinion of Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>