force-app/main/default/objects/Application_Property__c/fields/Credit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Credit_Loss__c</fullName>
    <label>Credit Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>