force-app/main/default/objects/Application_Property__c/fields/Currently_Leased__c.field-meta.xml
<CustomField>
    <fullName>Currently_Leased__c</fullName>
    <label>Currently Leased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>