force-app/main/default/objects/Application_Property__c/fields/Landscaping_Expense__c.field-meta.xml
<CustomField>
    <fullName>Landscaping_Expense__c</fullName>
    <label>Landscaping Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>