force-app/main/default/objects/Application_Property__c/fields/Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_End_Date__c</fullName>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>