force-app/main/default/objects/Application_Property__c/fields/Lease_Ready__c.field-meta.xml
<CustomField>
    <fullName>Lease_Ready__c</fullName>
    <label>Lease Ready</label>
    <length>255</length>
    <type>Text</type>
</CustomField>