force-app/main/default/objects/Application_Property__c/fields/Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term__c</fullName>
    <label>Lease Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>