force-app/main/default/objects/Application_Property__c/fields/Lease_UpMarketing__c.field-meta.xml
<CustomField>
    <fullName>Lease_UpMarketing__c</fullName>
    <label>Lease Up/Marketing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>