force-app/main/default/objects/Application_Property__c/fields/MaintenanceRepairs__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceRepairs__c</fullName>
    <label>Maintenance/Repairs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>