force-app/main/default/objects/Application_Property__c/fields/Other_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Other_Expenses__c</fullName>
    <label>Other Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>