force-app/main/default/objects/Application_Property__c/fields/Owner_Paid_Utilities__c.field-meta.xml
<CustomField>
    <fullName>Owner_Paid_Utilities__c</fullName>
    <label>Owner Paid Utilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>