force-app/main/default/objects/Application_Property__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <label>Pool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>