force-app/main/default/objects/Application_Property__c/fields/Property_Management__c.field-meta.xml
<CustomField>
    <fullName>Property_Management__c</fullName>
    <label>Property Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>