force-app/main/default/objects/Application_Property__c/fields/Rehab_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Completion_Date__c</fullName>
    <label>Rehab Completion Date</label>
    <type>Date</type>
</CustomField>