force-app/main/default/objects/Application_Property__c/fields/Rehab_Costs__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Costs__c</fullName>
    <label>Rehab Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>