force-app/main/default/objects/Application_Property__c/fields/Section_8__c.field-meta.xml
<CustomField>
    <fullName>Section_8__c</fullName>
    <label>Section 8</label>
    <length>255</length>
    <type>Text</type>
</CustomField>