force-app/main/default/objects/Application_Property__c/fields/Special_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Special_Assessments__c</fullName>
    <label>Special Assessments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>