force-app/main/default/objects/Application_Property__c/fields/Total_Basis__c.field-meta.xml
<CustomField>
    <fullName>Total_Basis__c</fullName>
    <label>Total Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>