force-app/main/default/objects/Application_Property__c/fields/Transaction_Costs__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Costs__c</fullName>
    <label>Transaction Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>