force-app/main/default/objects/Application_Property__c/fields/Vacancy_RepairsMaintenance__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_RepairsMaintenance__c</fullName>
    <label>Vacancy Repairs/Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>